Friends 화면에서 회사누렀을때 첫채팅의경우 구현완료

--- a/kokoa/templates/chats.html
+++ b/kokoa/templates/chats.html
@@ -48,6 +48,7 @@
             <div class="user-component__column">
                 <span class="user-component__time">21:22</span>
                 <span class="badge">1</span>
+                
             </div>
         </div>
         <br>
@@ -59,7 +60,7 @@
 
     <nav class="nav">
         <ul class="nav__list">
-            <li class="nav__btn"><a class="nav__link" href="friends.html">
+            <li class="nav__btn"><a class="nav__link" href="{{url_for('main.login')}}">
                 <i class="far fa-user fa-2x"></i></a></li>
             <li class="nav__btn"><a class="nav__link" href="chats.html">
                 <span class="nav__notification badge">1</span>
