--- a/kokoa/templates/index.html
+++ b/kokoa/templates/index.html
@@ -30,7 +30,7 @@
     <form name='form' id="login-form" method="post">
         <input name="username" type="text" required placeholder="Name"/>
         <input name = "password" type="text" required placeholder="Password"/>
-        <input type='submit' value="Log In" onclick="javascript: form.action='/login';" />
+        <input type='submit' value="Log In" onclick="javascript: form.action='/friends/';" />
         <input type='submit' value="Sign Up" onclick="javascript: form.action='/signup';"/>
         <a href="#">Find Kokoa Account or Password</a>
     </form>
