--- a/kokoa/static/css/components/badge.css
+++ b/kokoa/static/css/components/badge.css
@@ -9,3 +9,14 @@
   color: white;
   font-weight: 100;
 }
+.delete{
+  background-color: tomato;
+  width: 90px;
+  height: 20px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-weight: 100;
+}
