--- a/kokoa/templates/chatdetail.html
+++ b/kokoa/templates/chatdetail.html
@@ -24,7 +24,7 @@
     
         <header class="alt-header">
             <div class="alt-header__column">
-                <a href="chats.html">
+                <a href="{{ url_for('chat.chats') }}">
                     <i class="fas fa-angle-left fa-2x"></i>
                 </a>
             </div>
@@ -36,7 +36,9 @@
                     <i class="fas fa-search fa-lg"></i>
                 </span>
                 <span>
-                    <i class="fas fa-bars fa-lg"></i>
+                    <a href="{{url_for('chat.deletechat') }}">
+                        <i class="fas fa-trash-alt fa-lg"></i>
+                    </a>
                 </span>
             </div>
         </header>
