Subway데이터업로드 및 불러오기 테스트 완료

--- a/kokoa/templates/base/base.html
+++ b/kokoa/templates/base/base.html
@@ -31,16 +31,18 @@
             <li class="nav__btn"><a class="nav__link" href="{{ url_for('chat.chats') }}">
                 <span class="nav__notification badge">1</span>
                 <i class="far fa-comment fa-2x"></i></a></li>
-            <li class="nav__btn"><a class="nav__link" href="find.html"><i class="fas fa-search fa-2x"></i></a></li>
+            <li class="nav__btn"><a class="nav__link" href="{{ url_for('find.findmain') }}"><i class="fas fa-search fa-2x"></i></a></li>
             <li class="nav__btn"><a class="nav__link" href="more.html">
                 <div class="nav__notification__little"></div>
                 <i class="fas fa-ellipsis-h fa-2x"></i></a></li>
         </ul>
     </nav>
-
+    
+    <!-- 스크린 노란색 잠시 띄우는 div -->
+<!-- 
     <div id="splash-screen">
         <i class="fas fa-comment "></i>
-    </div>
+    </div> -->
 
     <div class="no-mobile">
         <span>Your screen too big</span>
