--- a/kokoa/templates/settings.html
+++ b/kokoa/templates/settings.html
@@ -94,35 +94,36 @@
                 </li>
                 <li class="settings__setting">
                     <div class="settings-setting-column">
-                        <i class="far fa-comment"></i>                        <span>Chats</span>
+                        <i class="far fa-comment"></i><span>Chats</span>
                     </div>
                     <div class="settings-setting-column"></div>
                 </li>
                 <li class="settings__setting">
                     <div class="settings-setting-column">
-                        <i class="far fa-sun"></i>                        <span>Display</span>
+                        <i class="far fa-sun"></i><span>Display</span>
                         <span class="alt__notification badge">N</span>
                     </div>
                     <div class="settings-setting-column"></div>
                 </li>
                 <li class="settings__setting">
                     <div class="settings-setting-column">
-                        <i class="fas fa-paint-roller"></i>                        <span>Themes</span>
+                        <i class="fas fa-paint-roller"></i><span>Themes</span>
                         <span class="alt__notification badge">N</span>
                     </div>
                     <div class="settings-setting-column">Default Theme</div>
                 </li>
                 <li class="settings__setting">
                     <div class="settings-setting-column">
-                        <i class="fas fa-phone-volume"></i>                        
-                        
+                        <i class="fas fa-phone-volume"></i>
                         <span>Call</span>
                     </div>
                     <div class="settings-setting-column"></div>
                 <li class="settings__setting">
                     <div class="settings-setting-column">
-                        <i class="fas fa-phone-volume"></i>                        
-                        <span>Call</span>
+                        <a href="{{url_for('main.updateSubway')}}">
+                            <i class="fas fa-phone-volume"></i>                        
+                            <span>Update Subway</span>
+                        </a>
                     </div>
                     <div class="settings-setting-column"></div>
                 </li>
