--- a/kokoa/templates/base/base.html
+++ b/kokoa/templates/base/base.html
@@ -44,9 +44,9 @@
         <i class="fas fa-comment "></i>
     </div> -->
 
-    <div class="no-mobile">
+    <!-- <div class="no-mobile">
         <span>Your screen too big</span>
-    </div>
+    </div> -->
     <script src="https://kit.fontawesome.com/7d7d69e213.js" crossorigin="anonymous">
     </script>
 </body>
