--- a/kokoa/templates/index.html
+++ b/kokoa/templates/index.html
@@ -23,16 +23,17 @@
     </div>
 
     <header class="welcome-header">
-        <h1 class="welcome-header__title" >Welcome to Kokoa Clone</h1>
-        <p class="welcome-header__text" >If you have a Kokoa Account, log in with your email or phone number.</p>
+        <h1 class="welcome-header__title" >Welcome to Gangnam Talk</h1>
+        <p class="welcome-header__text" >If you have a Account,<br> log in with your Name.</p>
     </header>
 
     <!-- <form id="login-form" action="{{ url_for('main.signup') }}" method="post"> -->
     <form name='form' id="login-form" method="post">
         <input name="username" type="text" required placeholder="Name"/>
         <input name = "password" type="text" required placeholder="Password"/>
-        <input type='submit' value="User Log In" onclick="javascript: form.action='/friends/';" />
-        <!-- <input type='submit' value="Company Log In" onclick="javascript: form.action='/friends/';" /> -->
+        <input type='submit' value="Log In" onclick="javascript: form.action='/friends/';" />
+            <!-- <input type='submit' value="Company Log In" onclick="javascript: form.action='/friends/';" /> -->
+            <!-- <input type='submit' value="Company Log In" onclick="javascript: form.action='/friends/';" /> -->
         <input type='submit' value="Sign Up" onclick="javascript: form.action='/signup';"/>
         <a href="#">Find Kokoa Account or Password</a>
     </form>
