--- a/kokoa/templates/index.html
+++ b/kokoa/templates/index.html
@@ -9,14 +9,14 @@
 <body>
     <div class='status-bar'>
         <div class="status-bar__column">
-            <span>No Service</span>
+            <span>Service</span>
             <i class="fas fa-wifi"></i>
         </div>
         <div class="status-bar__column">
             <span>18:43</span>
         </div>
         <div class="status-bar__column">
-            <span>110%</span>
+            <span>111%</span>
             <i class="fas fa-battery-full fa-lg"></i>
             <i class="fas fa-bolt"></i> 
         </div>
@@ -35,7 +35,7 @@
             <!-- <input type='submit' value="Company Log In" onclick="javascript: form.action='/friends/';" /> -->
             <!-- <input type='submit' value="Company Log In" onclick="javascript: form.action='/friends/';" /> -->
         <input type='submit' value="Sign Up" onclick="javascript: form.action='/signup';"/>
-        <a href="#">Find Kokoa Account or Password</a>
+        <a href="#">Find Account or Password</a>
     </form>
    <div id="splash-screen">
         <i class="fas fa-comment "></i>
