--- a/kokoa/templates/friends_ex.html
+++ b/kokoa/templates/friends_ex.html
@@ -1,7 +1,7 @@
 {% extends 'base/base.html' %}
 {% block content%}
 <header class="screen-header">
-    <h1 class="screen-header__title">Friends</h1>
+    <h1 class="screen-header__title">Company</h1>
     <div class="screen-header__icons">
         <span><i class="fas fa-search fa-lg"></i></span>
         <span><i class="fas fa-music fa-lg"></i></span>
@@ -12,7 +12,7 @@
 </header>
 
 <a id="friends-display-link">
-    <i class="fas fa-info-circle"></i>Friends' Names Display
+    <i class="fas fa-info-circle"></i>Company Names Display
     <i class="fas fa-chevron-right fa-xs"></i>
 </a>
 
